--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -61,6 +61,11 @@ html(lang="ru")
 		
 		block content
 		
+
+		//======модальное окно-форма подписки =======
+		//========================	Модальные окна имеют атрибут  frame-modal и по умолчанию имеют dispaly:none; Элемент, по клику на который оно отображается, имеет атрибут frame-btn.  По клику на frame-btn, frame-modal добавляется класс visible с dispaly:flex; ==========
+		
+		include ../sections/_modal-form.pug
 		//=============== jquery ===================
 		script(src="./libs/jquery/jquery-3.0.0.min.js")
 		
