--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -6,7 +6,7 @@ footer.footer#footer
 				img(src="./img/logo.webp", width="75" height="75" alt="logo")
 				p Инвестиционный<br> портал РСО&#8209;Алания
 			.btn-wrapper
-				button(type="button").btn-accent
+				button(type="button" frame-btn="modal-subscribe").btn-accent
 					span Подписаться на новости
 					svg.svg-plus
 						use(href="./img/spriteSvg.svg#svg-mail")
