--- a/src/pug/sections/_success-history.pug
+++ b/src/pug/sections/_success-history.pug
@@ -149,7 +149,7 @@
 					a(href="#!").btn-outline
 						span Загрузить еще проекты
 						svg.svg-add
-							use(href="../img/spriteSvg.svg#svg-add")
+							use(href="./img/spriteSvg.svg#svg-add")
 
 					.cards-counter 3 / 97
 		
@@ -178,7 +178,7 @@
 								button(type="button").btn-outline#advanced-search-btn
 									span Расширенный поиск
 									svg.svg-filter
-										use(href="../img/spriteSvg.svg#svg-filter")
+										use(href="./img/spriteSvg.svg#svg-filter")
 						fieldset.form-fieldset#advanced-form
 							//==== form single row =====
 							.form-row
@@ -220,12 +220,12 @@
 									button(type="button").btn-outline
 										span Применить
 										svg.svg-check
-											use(href="../img/spriteSvg.svg#svg-check")
+											use(href="./img/spriteSvg.svg#svg-check")
 
 									button(type="button").btn.btn-clean
 										span Отменить
 										svg.svg-reload
-											use(href="../img/spriteSvg.svg#svg-reload")
+											use(href="./img/spriteSvg.svg#svg-reload")
 
 				//=== cards block====
 				.invest-catalogy__cards
@@ -278,7 +278,7 @@
 					a(href="#!").btn-outline
 						span Загрузить еще проекты
 						svg.svg-add
-							use(href="../img/spriteSvg.svg#svg-add")
+							use(href="./img/spriteSvg.svg#svg-add")
 
 					.cards-counter 4 / 12
 		
@@ -291,4 +291,4 @@
 				a(href="#!").btn-accent
 					span Подать заявку
 					svg.svg-folder
-						use(href="../img/spriteSvg.svg#svg-folder")
+						use(href="./img/spriteSvg.svg#svg-folder")
