--- a/src/scss/base/_var.scss
+++ b/src/scss/base/_var.scss
@@ -8,7 +8,7 @@ $white:white;
 $black:black;
 $er: red;
 $sec: #767DA1;
-$sec1: #A9ADC6;
+$sec1: rgb(169, 173, 198);
 $sec2: #E1E3EF ;
 $sec3: #EDEDED ;
 $sec4: #F9F9FB ;
