--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -20,7 +20,7 @@ html,
 body {
 	margin: 0;
 	padding: 0;
-	color: $pr;
+	color: $sec;
 	font-family: $reg;
 	font-size: 16px;
 	line-height: 1.3;
@@ -178,8 +178,11 @@ article{
 	}
 
 }
- .fl-block,.flx-center,.fly-center, .fl-center, .fl-column,.flex-link{display: flex;}
-	
+ .fl-block,.flx-center,.fly-center, .fl-center, .fl-column,.fl-column-20,.flex-link{display: flex;}
+.fl-column-20{
+	 row-gap:20px;
+	&>*{width: 100%;}
+}
 .fly-bottom{align-items: flex-end!important;}
 
 .flx-center,.fl-center{
@@ -190,7 +193,7 @@ article{
 	svg{flex-shrink: 0;}
 }
  .flex-link{column-gap:10px;}
-.fl-column{
+.fl-column,.fl-column-20{
 	flex-direction: column;
 }
 .pos-rel{
