--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,7 @@
 //@import "blocks/";
 
 //sections
+@import "sections/_modal.scss";
 @import "sections/_header-slider.scss";
 @import "sections/_main-menu.scss";
 @import "sections/_invest-projects.scss";
