--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -17,6 +17,9 @@ block content
 			
 			a(href="projects.html")
 				span Инвестиционный климат
+
+			a(href="documents.html")
+				span Документы
 				
 block variables
 	-var title = "Page";
