--- a/src/pug/mixins/_cards.pug
+++ b/src/pug/mixins/_cards.pug
@@ -1,5 +1,5 @@
 mixin download-card(text)
-	a(href="#!").download-card.fly-center
+	a(href="#!").download-card
 		img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 		p #{text}
 		span .pdf
