--- a/src/pug/sections/_economics.pug
+++ b/src/pug/sections/_economics.pug
@@ -3,14 +3,14 @@ article.regional-economics
 		.h3 Экономика районов
 		.double-block
 			//=====card======
-			a(href="#!").download-card.fly-center
+			a(href="#!").download-card
 				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Пригородный район
 				span .pdf
 				svg.svg-downl
 					use(href="./img/spriteSvg.svg#svg-downl")
 			//=====card======
-			a(href="#!").download-card.fly-center
+			a(href="#!").download-card
 				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Ирафский район
 				span .pdf
@@ -18,14 +18,14 @@ article.regional-economics
 					use(href="./img/spriteSvg.svg#svg-downl")
 
 			//=====card======
-			a(href="#!").download-card.fly-center
+			a(href="#!").download-card
 				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Дигорский район
 				span .pdf
 				svg.svg-downl
 					use(href="./img/spriteSvg.svg#svg-downl")
 			//=====card======
-			a(href="#!").download-card.fly-center
+			a(href="#!").download-card
 				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Моздокский район
 				span .pdf
@@ -33,14 +33,14 @@ article.regional-economics
 					use(href="./img/spriteSvg.svg#svg-downl")
 
 			//=====card======
-			a(href="#!").download-card.fly-center
+			a(href="#!").download-card
 				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Ардонский район
 				span .pdf
 				svg.svg-downl
 					use(href="./img/spriteSvg.svg#svg-downl")
 			//=====card======
-			a(href="#!").download-card.fly-center
+			a(href="#!").download-card
 				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Кировский район
 				span .pdf
@@ -48,21 +48,21 @@ article.regional-economics
 					use(href="./img/spriteSvg.svg#svg-downl")
 
 			//=====card======
-			a(href="#!").download-card.fly-center
+			a(href="#!").download-card
 				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Владикавказ
 				span .pdf
 				svg.svg-downl
 					use(href="./img/spriteSvg.svg#svg-downl")
 			//=====card======
-			a(href="#!").download-card.fly-center
+			a(href="#!").download-card
 				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Правобережный район
 				span .pdf
 				svg.svg-downl
 					use(href="./img/spriteSvg.svg#svg-downl")
 			//=====card======
-			a(href="#!").download-card.fly-center
+			a(href="#!").download-card
 				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Алагирский район
 				span .pdf
