--- a/src/pug/sections/_invest-commissioners.pug
+++ b/src/pug/sections/_invest-commissioners.pug
@@ -16,14 +16,14 @@ article.invest-commissioners
 		p Работа института инвестиционных уполномоченных позволяет сократить сроки согласований и разрешений за счет ежедневного контроля и вовлеченности в проект и, как следствие, существенно снизить временные издержки при реализации проекта.
 		.single-column
 			//=====card======
-			a(href="#!").download-card.fly-center
+			a(href="#!").download-card
 				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 				p Распоряжение Правительства Нижегородской области от 29.03.2019 № 264-р «Об инвестиционных уполномоченных в Нижегородской области»
 				span .pdf
 				svg.svg-downl
 					use(href="./img/spriteSvg.svg#svg-downl")
 			//=====card======
-			a(href="#!").download-card.fly-center
+			a(href="#!").download-card
 				img(src="./img/icons/doc.webp", width="62" height="62" alt="img")
 				p Список инвестиционных уполномоченных Нижегородской области
 				span .doc
