--- a/src/pug/sections/_success-history.pug
+++ b/src/pug/sections/_success-history.pug
@@ -158,7 +158,7 @@
 				.h2 Каталог инвестиционных предложений
 				p.body-reg В Каталоге инвестиционных предложений Нижегородской области представлены для инвесторов масштабные инфраструктурные проекты, требующие частного финансирования, проекты, предполагающие долевое участие инвестора в создании новых или модернизации действующих предприятий, а также готовые инвестиционные площадки по таким направлениям как промышленность, сельское хозяйство, туризм и др., а также сведения о льготных территориях, на которых возможно размещение различных объектов для нужд инвесторов, и контакты лиц, отвечающих за сопровождение проекта
 
-				a(href="#!").download-card.fly-center
+				a(href="#!").download-card
 					img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
 					p Каталог инвестиционных предложений РСО-Алания
 					span .pdf
