--- a/src/pug/sections/_success-history.pug
+++ b/src/pug/sections/_success-history.pug
@@ -12,12 +12,13 @@
 					a(href="#aplication") Заявка на сопровождение инвестиционного проекта
 
 	section.projects
+		//===== Истории успеха ======
 		article.success-history.sticky-menu-section#success-history
 			.container
 				.h2 Истории успеха
 				.brand-cards-wrapper
 					//====card=====
-					.brand-card.fl-block
+					.brand-card
 						.project-card
 							.project-card__img
 								img(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
@@ -32,7 +33,7 @@
 							p Компания «А.Раймонд РУС» запустила свой завод в Нижегородской области в 2015 году на территории городского округа город Дзержинск. Производство было запущено в кратчайшие сроки при активном содействии региональных властей. 
 							p Основные сферы деятельности предприятия – производство и продажа крепежных изделий и специализированных компонентов из пластмассы преимущественно для автомобильной промышленности России. Сегодня крепежные элементы от Компания «А.Раймонд РУС» используются практически во всех автомобилях отечественной сборки.
 					//====card=====
-					.brand-card.fl-block
+					.brand-card
 						.project-card
 							.project-card__img
 								img(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
@@ -45,7 +46,7 @@
 							p Сегодня РБПИ Групп в Нижегородской области – это 2 свиноводческих комплекса, 1 растениеводческое подразделение и 2 комбикормовых завода. Компания продолжает инвестиционную деятельность в области сельского хозяйства – в 2022 году планируется ввод в эксплуатацию двух свиноводческих комплексов в Сергачском и Ардатовском районах.
 							p РБПИ Групп входит в число крупнейших производителей свинины в России.
 					//====card=====
-					.brand-card.fl-block
+					.brand-card
 						.project-card
 							.project-card__img
 								img(src="./img/brend-logo5.webp", width="245" height="101" alt="logo")
@@ -153,6 +154,7 @@
 
 					.cards-counter 3 / 97
 		
+		//===== Проекты для инвестирования ======
 		article.invest-catalogy.sticky-menu-section#invest-catalogy
 			.container
 				.h2 Каталог инвестиционных предложений
@@ -282,7 +284,7 @@
 
 					.cards-counter 4 / 12
 		
-		
+		//===== Заявка на сопровождение ======
 		article.application.sticky-menu-section#aplication
 			.container
 				.h2 Заявка на сопровождение инвестиционного проекта
