--- a/src/scss/sections/_main-menu.scss
+++ b/src/scss/sections/_main-menu.scss
@@ -17,7 +17,7 @@
 		transition: height .5s;
 		right: 0;
 		width: 100%;
-		z-index: 5;
+		// z-index: 5;
 		padding-bottom: 0;
 		height: 70px;
 	}
