--- a/src/pug/sections/_documents-page.pug
+++ b/src/pug/sections/_documents-page.pug
@@ -15,280 +15,127 @@
 		article.state-support.sticky-menu-section#state-support
 			.container
 				.h2 Господдержка
-				.brand-cards-wrapper
-					//====card=====
-					.brand-card.fl-block
-						.project-card
-							.project-card__img
-								img(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
-							.project-card__footer.fly-center
-								p ООО «А.РАЙМОНД РУС»(Франция)
-								a(href="#!").project-card__link
-									svg.svg-cam
-										use(href="./img/spriteSvg.svg#svg-cam")
-
-						.brand-card__text
-							.title-24 ООО «А.РАЙМОНД РУС»(Франция)
-							p Компания «А.Раймонд РУС» запустила свой завод в Нижегородской области в 2015 году на территории городского округа город Дзержинск. Производство было запущено в кратчайшие сроки при активном содействии региональных властей. 
-							p Основные сферы деятельности предприятия – производство и продажа крепежных изделий и специализированных компонентов из пластмассы преимущественно для автомобильной промышленности России. Сегодня крепежные элементы от Компания «А.Раймонд РУС» используются практически во всех автомобилях отечественной сборки.
-					//====card=====
-					.brand-card.fl-block
-						.project-card
-							.project-card__img
-								img(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
-							.project-card__footer.fly-center
-								p РБПИ ГРУПП (Норвегия)
-
-						.brand-card__text
-							.title-24 РБПИ ГРУПП (Норвегия)
-							p В 2012 году РБПИ Групп основала свиноводческий комплекс ООО «ННПП» в Нижегородской области. В 2016 году компания приступила к реализации второго свиноводческого комплекса ООО «ННПП-2» в Большемурашкинском районе Нижегородской области.
-							p Сегодня РБПИ Групп в Нижегородской области – это 2 свиноводческих комплекса, 1 растениеводческое подразделение и 2 комбикормовых завода. Компания продолжает инвестиционную деятельность в области сельского хозяйства – в 2022 году планируется ввод в эксплуатацию двух свиноводческих комплексов в Сергачском и Ардатовском районах.
-							p РБПИ Групп входит в число крупнейших производителей свинины в России.
-					//====card=====
-					.brand-card.fl-block
-						.project-card
-							.project-card__img
-								img(src="./img/brend-logo5.webp", width="245" height="101" alt="logo")
-							.project-card__footer.fly-center
-								p ООО «ХОМА АДГЕЗИВ»(Россия)
-								a(href="#!").project-card__link
-									svg.svg-cam
-										use(href="./img/spriteSvg.svg#svg-cam")
-
-						.brand-card__text
-							.title-24 ООО «ХОМА АДГЕЗИВ»(Россия)
-							p Компания «Хома» – российский разработчик и производитель полимерных дисперсий и клеевых систем. На рынке химической отрасли с 1998 года. Сегодня научную деятельность компании осуществляют 2 научных и 6 исследовательских центров, 4 специализированные лаборатории.
-							p Компания активно расширяет производственные мощности. С 2017 года запущен инвестиционный проект по расширению собственного производства в г. Дзержинске Нижегородской области. В 2020 году дочернее предприятие «Хома Адгезив» стало резидентом ОЭЗ «Кулибин», что обеспечило снижение налоговых ставок на прибыль, а также нулевые ставки по налогам на имущество, землю и транспортный налог. Статус «резидента» – это не только новые производственные возможности и инвестирование на выгодных условиях, но и установление кооперационных связей между резидентами ОЭЗ.
-							p В 2021 году компания «Хома Адгезив» запустила первый участок по производству полиуретановых клеевых систем, применяемых в строительной и автомобильной отраслях, в июне 2022 года состоялось открытие второго участка по производству водных клеевых материалов. Общий объем инвестиций в проект составляет около 318 млн рублей, предусмотрено создание 160 новых рабочих мест.
+				.download-cards-wrapper
+					+download-card('О государственной программе Республики Северная Осетия-Алания «Поддержка и развитие малого, среднего предпринимательства и инвестиционной деятельности в Республике Северная Осетия-Алания» на 2020-2024 годы', 'pdf')
+					+download-card('Постановление Правительства РФ от 15 апреля 2014 г. N 309 "Об утверждении государственной программы Российской Федерации "Развитие Северо-Кавказского федерального округа"', 'pdf')
 		
-		//===== Реализованные инвестиционные проекты ======
+		
+		//===== Антимонопольный комплаенс ======
 		article.antitrust.sticky-menu-section#antitrust
 			.container
-				.h2 Реализованные инвестиционные проекты на территории республики
-				
-				//===== single card ======
-				.success-project.fl-block
-					.success-project__left
-						img(src="./img/brend-logo6.webp", width="245" height="101" alt="logo")
-					.success-project__center
-						.h4 ООО «Ателье Гончарова»
-						p Строительство предприятия по производству музыкальных инструментов
-						ul
-							li
-								span Страна
-								p Россия
-							li
-								span Реализация:
-								p г.о.г.Нижний Новгород
-							li
-								span Отрасль:
-								p Промышленность
-					.success-project__right
-						.h4 Объем инвестиций:
-						
-						.h1 130
-							//===== это спан для моб версии
-							span млн рублей
-						//===== это спан для деск версии
-						span млн рублей
+				.h2 Антимонопольный комплаенс
+				.download-cards-wrapper
+					+download-card('Приказ АО КИР РСО-А N49 от 27.12.2018')
+					+download-card('Положение об организации системы внутреннего обеспечения соответствия требованиям антимонопольного законодательства в акционерном обществе «Корпорация инвестиционного развития Республики Северная Осетия-Алания»')
+					+download-card('Письмо Минэкономразвития РСО-А 38.1740 от 05.12.2018')
+					+download-card('Указ Президента РФ от 21.12.2017г. №618 Об основных направлениях государственной политики по развитию конкуренции')
+					+download-card('Распоряжение Правительства РСО-Алания от 04.09.2018г. №295-р О мерах по организации системы внутреннего обеспеченияя соответствия требованиям антимонопольного законодательства деятельности органов исполнительной власти РСО-А')
 
-				//===== single card ======
-				.success-project.fl-block
-					.success-project__left
-						img(src="./img/brend-logo7.webp", width="245" height="101" alt="logo")
-					.success-project__center
-						.h4 ООО «Тепличный комбинат Нижегородский»
-						p Строительство тепличного комплекса для круглогодичного выращивания овощной продукции
-						ul
-							li
-								span Страна
-								p Россия
-							li
-								span Реализация:
-								p г.о.г.Бор
-							li
-								span Отрасль:
-								p Сельское хозяйство
-					.success-project__right
-						.h4 Объем инвестиций:
-						
-						.h1 5 336
-							//===== это спан для моб версии
-							span млн рублей
-						//===== это спан для деск версии
-						span млн рублей
 
-				//===== single card ======
-				.success-project.fl-block
-					.success-project__left
-						img(src="./img/brend-logo5.webp", width="245" height="101" alt="logo")
-					.success-project__center
-						.h4 ООО «Хома Адгезив»
-						p Создание производства клеевых материалов на основе сополимер-акриловых, поливинилацетатных и полиуретановых дисперсий
-						ul
-							li
-								span Страна
-								p Россия
-							li
-								span Реализация:
-								p г.о.г.Дзержинск
-							li
-								span Отрасль:
-								p Химическая промышленность
-					.success-project__right
-						.h4 Объем инвестиций:
-						
-						.h1 318
-							//===== это спан для моб версии
-							span млн рублей
-						//===== это спан для деск версии
-						span млн рублей
-		
-				//===== блок с кнопкой ======
-				.btn-wrapper.fly-center
-					a(href="#!").btn-outline
-						span Загрузить еще проекты
-						svg.svg-add
-							use(href="./img/spriteSvg.svg#svg-add")
-
-					.cards-counter 3 / 97
-		
+		//========Нормативные документы========		
 		article.normative.sticky-menu-section#normative
 			.container
-				.h2 Каталог инвестиционных предложений
-				p.body-reg В Каталоге инвестиционных предложений Нижегородской области представлены для инвесторов масштабные инфраструктурные проекты, требующие частного финансирования, проекты, предполагающие долевое участие инвестора в создании новых или модернизации действующих предприятий, а также готовые инвестиционные площадки по таким направлениям как промышленность, сельское хозяйство, туризм и др., а также сведения о льготных территориях, на которых возможно размещение различных объектов для нужд инвесторов, и контакты лиц, отвечающих за сопровождение проекта
-
-				a(href="#!").download-card
-					img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
-					p Каталог инвестиционных предложений РСО-Алания
-					span .pdf
-					svg.svg-downl
-						use(href="./img/spriteSvg.svg#svg-downl")
-					
-				//===== search form ====	
-				.invest-catalogy__form
-					form.catalogy-form(action="" method="method")
-						fieldset.form-fieldset
-							.form-row
-								.form-item.form-item--search
-									input.form-input(type="text" placeholder="Найти...")
-									button(type="submit").flx-center
-										svg.svg-search
-											use(href="./img/spriteSvg.svg#svg-search")
-								button(type="button").btn-outline#advanced-search-btn
-									span Расширенный поиск
-									svg.svg-filter
-										use(href="./img/spriteSvg.svg#svg-filter")
-						fieldset.form-fieldset#advanced-form
-							//==== form single row =====
-							.form-row
-								//===single select ====
-								.form-item
-									label.text-label Отрасль
-									.mySelect
-										.mySelect-icon
-										.mySelect-input
-											input.selectValue(type='text' readonly='' placeholder="Выберите значение")
-										.mySelect-drop
-											input.mySelect-options(type='text' readonly='' value='Значение-1')
-											input.mySelect-options(type='text' readonly='' value='Значение-2')
-											input.mySelect-options(type='text' readonly='' value='Значение-3')
-											input.mySelect-options(type='text' readonly='' value='Значение-4')
-								
-								//===single select ====
-								.form-item
-									label.text-label Район
-									.mySelect
-										.mySelect-icon
-										.mySelect-input
-											input.selectValue(type='text' readonly='' placeholder="Выберите значение")
-										.mySelect-drop
-											input.mySelect-options(type='text' readonly='' value='Значение-1')
-											input.mySelect-options(type='text' readonly='' value='Значение-2')
-											input.mySelect-options(type='text' readonly='' value='Значение-3')
-											input.mySelect-options(type='text' readonly='' value='Значение-4')
-
-							//==== form single row =====
-							.form-row.form-row--grid
-								.form-item
-									label.text-label Объем финансирования (млн руб.)
-									.form-item__group.fly-center
-										input(type="number" placeholder="Введите значение")
-										span -
-										input(type="number" placeholder="Введите значение")
-								.form-item.form-buttons
-									button(type="button").btn-outline
-										span Применить
-										svg.svg-check
-											use(href="./img/spriteSvg.svg#svg-check")
-
-									button(type="button").btn.btn-clean
-										span Отменить
-										svg.svg-reload
-											use(href="./img/spriteSvg.svg#svg-reload")
-
-				//=== cards block====
-				.invest-catalogy__cards
-					//====card=====
-					.foto-card
-						a(href="#!").foto-card__text.fl-column
-							.txt-semi Преференциальные территории
-							p Особая экономическая зона промышленно-производственного типа «Кулибин»
-
-							.body-6 Смотреть проект
-						
-						.foto-card__pic
-							img(src="./img/catalog1.webp", width="325" height="289" alt="foto")
-
-					//====card=====
-					.foto-card
-						a(href="#!").foto-card__text.fl-column
-							.txt-semi Преференциальные территории
-							p Территория опережающего развития «САРОВ»
-
-							.body-6 Смотреть проект
-						
-						.foto-card__pic
-							img(src="./img/catalog2.webp", width="325" height="289" alt="foto")
-					
-					//====card=====
-					.foto-card
-						a(href="#!").foto-card__text.fl-column
-							.txt-semi Индустриальные парки
-							p Индустриальный парк «ЗАРЯ»
-
-							.body-6 Смотреть проект
-						
-						.foto-card__pic
-							img(src="./img/catalog3.webp", width="325" height="289" alt="foto")
-					
-					//====card=====
-					.foto-card
-						a(href="#!").foto-card__text.fl-column
-							.txt-semi Технопарки
-							p Промышленный технопарк «Машиностроение»
-
-							.body-6 Смотреть проект
-						
-						.foto-card__pic
-							img(src="./img/catalog4.webp", width="325" height="289" alt="foto")
+				.h2 Нормативные документы
+				.download-cards-wrapper
+					+download-card('Годовой отчет за 2022г.', 'pdf')
+					+download-card('Годовой отчет АО КИР за 2021.', 'pdf')
+					+download-card('Аудиторское заключение за 2020 г.')
+					+download-card('Годовой отчет КИР за 2020 г.')
+					+download-card('Аудиторское заключение независимого аудитора за 2019г.')
+					+download-card('Указ Главы Республики Северная Осетия-Алания от 22 февраля 2017 г. N 39 О порядке принятия решения о предоставлении юридическим лицам земельных участков в аренду без проведения торгов', 'pdf')
+					+download-card('Закон Республики Северная Осетия-Алания от 15 апреля 2000 г. N 8-РЗ Об инвестиционной деятельности в Республике Северная Осетия-Алания')
+					+download-card('Приложение к распоряжению № 115-р итоги СЭР РСО-А 2019')
 		
-				//===== блок с кнопкой ======
-				.btn-wrapper.fly-center
-					a(href="#!").btn-outline
-						span Загрузить еще проекты
-						svg.svg-add
-							use(href="./img/spriteSvg.svg#svg-add")
-
-					.cards-counter 4 / 12
-		
-		
+		//========Экономика республики========
 		article.economy-republic.sticky-menu-section#economy-republic
 			.container
-				.h2 Заявка на сопровождение инвестиционного проекта
-				p Если Вы начинаете реализацию инвестиционного проекта на территории Нижегородской области, Вы можете подать заявку на сопровождение инвестиционного проекта в соответствии с Регламентом сопровождения инвестпроектов, отслеживать статус поданной заявки и получить обратную связь от органов власти по результатам ее обработки.
+				.h2 Экономика республики
+				
+				.economy-republic__block
+					.h3 Экономика районов
+					.double-block
+						//=====card======
+						a(href="#!").download-card
+							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							p Пригородный район
+							span .pdf
+							svg.svg-downl
+								use(href="./img/spriteSvg.svg#svg-downl")
+						//=====card======
+						a(href="#!").download-card
+							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							p Ирафский район
+							span .pdf
+							svg.svg-downl
+								use(href="./img/spriteSvg.svg#svg-downl")
 
-				a(href="#!").btn-accent
-					span Подать заявку
-					svg.svg-folder
-						use(href="./img/spriteSvg.svg#svg-folder")
+						//=====card======
+						a(href="#!").download-card
+							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							p Дигорский район
+							span .pdf
+							svg.svg-downl
+								use(href="./img/spriteSvg.svg#svg-downl")
+						//=====card======
+						a(href="#!").download-card
+							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							p Моздокский район
+							span .pdf
+							svg.svg-downl
+								use(href="./img/spriteSvg.svg#svg-downl")
+
+						//=====card======
+						a(href="#!").download-card
+							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							p Ардонский район
+							span .pdf
+							svg.svg-downl
+								use(href="./img/spriteSvg.svg#svg-downl")
+						//=====card======
+						a(href="#!").download-card
+							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							p Кировский район
+							span .pdf
+							svg.svg-downl
+								use(href="./img/spriteSvg.svg#svg-downl")
+
+						//=====card======
+						a(href="#!").download-card
+							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							p Владикавказ
+							span .pdf
+							svg.svg-downl
+								use(href="./img/spriteSvg.svg#svg-downl")
+						//=====card======
+						a(href="#!").download-card
+							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							p Правобережный район
+							span .pdf
+							svg.svg-downl
+								use(href="./img/spriteSvg.svg#svg-downl")
+						//=====card======
+						a(href="#!").download-card
+							img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+							p Алагирский район
+							span .pdf
+							svg.svg-downl
+								use(href="./img/spriteSvg.svg#svg-downl")
+
+				//========Природные ресурсы РСО-А =======
+				.economy-republic__block
+					.h3 Природные ресурсы РСО-А
+					.download-cards-wrapper
+
+						+download-card('Нераспределенный фонд РСО-А_1.')
+						+download-card('Минеральные воды РСО-А (бальнеологические группы)_1.')
+						+download-card('Месторождения минеральных вод РСО-А_1.')
+						+download-card('Лечебно-оздоровительные местности РСО-А (1).')
+						
+
+				//========Доступная инфраструктура =======
+				.economy-republic__block
+					.h3 Доступная инфраструктура для размещения производственных и иных объектов инвесторов
+					.download-cards-wrapper
+						+download-card('Отчет о деятельности Бизнес инкубатора ИТ-парк Алания за 2015 год', 'pdf')
+						+download-card('Отчет ГБУ Бизнес-инкубатор ИТ Парк Алания за 2014 год', 'pdf')
+						+download-card('Справка Министерства туризма, предпринимательства и инвестиционной политики РСО-Алания по Бизнес инкубатору', 'pdf')
