--- a/src/scss/sections/_custom-tabs.scss
+++ b/src/scss/sections/_custom-tabs.scss
@@ -59,6 +59,7 @@
 				padding-top: 7px;
 				padding-bottom: 7px;
 				border-bottom:0;
+				min-height: 47px;
 				
 				}
 			@media (max-width: 899px) {
