--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -20,6 +20,9 @@ block content
 
 			a(href="documents.html")
 				span Документы
+			
+			a(href="partnership.html")
+				span Партнерство
 				
 block variables
 	-var title = "Page";
