--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -1,10 +1,14 @@
 header.header.header-slider-wrapper
 	.header-slider.owl-carousel
-		.header-slider__item.fly-center(style="background-image: url(./img/header-bg11.webp)")
+		.header-slider__item.fly-center
+			.header-slider__img
+				img(src="./img/header-bg1.webp", alt="")
 			.gradient-box.mb-30
 				.h1 Инвестиционный портал <br> РСО-Алания
 			
-		.header-slider__item.fly-center(style="background-image: url(./img/header-bg1.webp)")
+		.header-slider__item.fly-center
+			.header-slider__img
+				img(src="./img/header-bg11.webp", alt="")
 			.gradient-block
 				.gradient-box.mb-30
 					.h2 Поддержка инвестиционной деятельности в регионе
