--- a/src/pug/sections/_header-inner.pug
+++ b/src/pug/sections/_header-inner.pug
@@ -1,4 +1,4 @@
-header.header
+header.header.header-inner
 	.header-content.fly-center(style="background-image: url(./img/news-header.webp)")
 		.gradient-box.mb-30
 			.h1 Новости и события
