--- a/src/scss/sections/_header-slider.scss
+++ b/src/scss/sections/_header-slider.scss
@@ -230,6 +230,28 @@
 
 			}
 		}
+		.header-slider__img{
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			&:before{
+				content:'';
+				position: absolute;	
+				background: linear-gradient(90deg, rgba(81, 98, 255, 0.00) 54.17%, rgba(59, 73, 183, 0.27) 75.52%, #212D64 100%), linear-gradient(0deg, rgba(81, 98, 255, 0.30) 0%, rgba(81, 98, 255, 0.30) 100%);
+					background-blend-mode: normal, screen, normal;
+				top: 0;
+				bottom: 0;
+				left: 0;
+				right: 0;
+			}
+			img{
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
+		}
 	}
 	@media (max-width: 1919px){
 		height: 800px;
