--- a/src/pug/pages/partnership.pug
+++ b/src/pug/pages/partnership.pug
@@ -4,7 +4,7 @@ block content
 	.page-grid
 		include ../sections/_main-menu
 		+header('Государственно-частное партнерство','partners-bg' )
-		include ../sections/_documents-page.pug
+		include ../sections/_partnership.pug
 		
 		
 	
