--- a/src/pug/sections/_benefits.pug
+++ b/src/pug/sections/_benefits.pug
@@ -3,23 +3,27 @@ article.benefits
 		.h3 Что предлагает АО «Корпорация инвестиционного развития Республики Северная Осетия-Алания
 		.benefits-block
 			//===single card ====
-			a(href="#").benefit-card
-				svg.svg-folder
-					use(href="./img/spriteSvg.svg#svg-folder")
+			.simple-card
+				.simple-card__icon
+					svg.svg-folder
+						use(href="./img/spriteSvg.svg#svg-folder")
 				.txt-medi Инвестиционные проекты
 
 			//===single card ====
-			a(href="#").benefit-card
-				svg.svg-folder
-					use(href="./img/spriteSvg.svg#svg-folder")
+			.simple-card
+				.simple-card__icon
+					svg.svg-folder
+						use(href="./img/spriteSvg.svg#svg-folder")
 				.txt-medi Инвестиционные площадки
 			//===single card ====
-			a(href="#").benefit-card
-				svg.svg-folder
-					use(href="./img/spriteSvg.svg#svg-folder")
+			.simple-card
+				.simple-card__icon
+					svg.svg-folder
+						use(href="./img/spriteSvg.svg#svg-folder")
 				.txt-medi Инновационные проекты
 			//===single card ====
-			a(href="#").benefit-card
-				svg.svg-folder
-					use(href="./img/spriteSvg.svg#svg-folder")
+			.simple-card
+				.simple-card__icon
+					svg.svg-folder
+						use(href="./img/spriteSvg.svg#svg-folder")
 				.txt-medi Инвестиционные предложения
