--- a/src/pug/sections/_support.pug
+++ b/src/pug/sections/_support.pug
@@ -3,46 +3,46 @@ article.support
 		.h3 Меры поддержки
 		.double-block
 			//====single card =====
-			.support-card.fly-center
+			.light-card
 				img(src="./img/logo.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
-			.support-card.fly-center
+			.light-card
 				img(src="./img/veb.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
-			.support-card.fly-center
+			.light-card
 				img(src="./img/logo.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
-			.support-card.fly-center
+			.light-card
 				img(src="./img/logo 3.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
-			.support-card.fly-center
+			.light-card
 				img(src="./img/logo.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
-			.support-card.fly-center
+			.light-card
 				img(src="./img/logo 4.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
-			.support-card.fly-center
+			.light-card.fly-center
 				img(src="./img/logo 5.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
-			.support-card.fly-center
+			.light-card.fly-center
 				img(src="./img/logo.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
-			.support-card.fly-center
+			.light-card.fly-center
 				img(src="./img/logo.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
-			.support-card.fly-center
+			.light-card.fly-center
 				img(src="./img/logo 6.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
 			//====single card =====
-			.support-card.fly-center
+			.light-card.fly-center
 				img(src="./img/logo 7.webp", width="75" height="75" alt="img")
 				.body-3 Финансовая поддержка субъектов МСП (Минэк РСО-А)
