--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,6 +33,7 @@
 @import "sections/_success-history.scss";
 @import "sections/_success-project.scss";
 @import "sections/_invest-catalog.scss";
+@import "sections/_partnership.scss";
 // @import "sections/.scss";
 // @import "sections/.scss";
 @import "pages/_news.scss/";
