--- a/src/scss/blocks/_project-card.scss
+++ b/src/scss/blocks/_project-card.scss
@@ -8,6 +8,8 @@
 	padding: 30px 20px;
 	display: flex;
 	flex-direction: column;
+	.h1{color: $ac1;padding-bottom: 20px;}
+	
 	@media (max-width: 767px) {
 		width: 320px;
 	}
