--- a/src/scss/sections/_support.scss
+++ b/src/scss/sections/_support.scss
@@ -1,10 +1,12 @@
 
-.support-card{
+.light-card{
 	padding: 40px 60px;
 	column-gap:20px;
 	border-radius: 20px;
 	border: 0.5px solid $sec2;
 	background: $sec4;
+	display: flex;
+	align-items: center;
 	.body-3{
 		max-width: 330px;
 		color: $sec;
